[package]
name = "pollard"
version = "0.1.0"
authors = ["assertivist"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/assertivist/pollard"
description = "experimental neolith client with elm front-end"
build = "build.rs"

[dependencies]
web-view = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
